--- a/TetraRenderLib/TetraRenderLib.vcxproj.filters
+++ b/TetraRenderLib/TetraRenderLib.vcxproj.filters
@@ -73,6 +73,9 @@
     <ClCompile Include="Texture.cpp">
       <Filter>sources\resources</Filter>
     </ClCompile>
+    <ClCompile Include="SceneSaver.cpp">
+      <Filter>sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
@@ -151,6 +154,9 @@
       <Filter>headers</Filter>
     </ClInclude>
     <ClInclude Include="waveFrontLoader.h">
+      <Filter>headers</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneSaver.h">
       <Filter>headers</Filter>
     </ClInclude>
   </ItemGroup>
