add loader for obj directly, but it seems bugged for now since they are not rendered.

--- a/TetraVisu/TetraVisu.vcxproj.filters
+++ b/TetraVisu/TetraVisu.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="ResourcesLibrary.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="WaveFrontImporter.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -78,6 +81,9 @@
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="ResourcesLibrary.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="WaveFrontImporter.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
