--- a/TetraVisu/TetraVisu.vcxproj
+++ b/TetraVisu/TetraVisu.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="stb_truetype.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="WaveFrontImporter.h" />
     <ClInclude Include="WindowBuilder.h" />
   </ItemGroup>
   <ItemGroup>
@@ -181,6 +182,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="TetraVisu.cpp" />
+    <ClCompile Include="WaveFrontImporter.cpp" />
     <ClCompile Include="WindowBuilder.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
