--- a/TetraRenderLib/TetraRenderLib.vcxproj
+++ b/TetraRenderLib/TetraRenderLib.vcxproj
@@ -181,6 +181,7 @@
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="Material.h" />
+    <ClInclude Include="MeshLoader.h" />
     <ClInclude Include="ParameterContainer.h" />
     <ClInclude Include="Polygon.h" />
     <ClInclude Include="PreprocessorShader.h" />
@@ -209,6 +210,7 @@
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="Material.cpp" />
+    <ClCompile Include="MeshLoader.cpp" />
     <ClCompile Include="ParameterContainer.cpp" />
     <ClCompile Include="Polygon.cpp" />
     <ClCompile Include="PreprocessorShader.cpp" />
