--- a/TetraRenderLib/TetraRenderLib.vcxproj
+++ b/TetraRenderLib/TetraRenderLib.vcxproj
@@ -233,6 +233,7 @@
     </ClCompile>
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="tiny_obj_loader.cc" />
     <ClCompile Include="waveFrontLoader.cpp" />
   </ItemGroup>
   <ItemGroup>
